Update SVNKit to 1.10.1. Updated required libraries.
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@20296 b29ace70-8910-0410-8dcc-aa2fc6433167